# SoCV_fp

./: README.md  aaa.cpp
CAD/: .output  Makefile  README  setup.mk
CAD/.tmp/: bin_rule.mk  ld_rule.mk  lib_rule.mk
CAD/.tmp/opt/dep/pkg/core/src/: atpg.cpp.d  circuit.cpp.d  clause.cpp.d  fault.cpp.d  gate.cpp.d  main.cpp.d  path.cpp.d  sat.cpp.d  spec.cpp.d  util.cpp.d  wire.cpp.d
CAD/netlist/: c17.v  c17_mod.v  s27.v
CAD/pkg/core/src/: .nfs0000000001401925000000a6  .nfs000000000140192b000000a4  .nfs0000000001401d81000000a7  .nfs0000000001401e33000000aa  .nfs0000000001401e5c000000a2  .nfs0000000001401e86000000a3  .nfs0000000001401eae000000a9  .nfs0000000001401eaf000000a8  .nfs0000000001401eb1000000a5  .nfs0000000001401eb4000000ab  CMakeLists.txt  EC.cpp  EC.h  Makefile  PM_ATPG.pro  atpg.cpp  atpg.h  circuit.cpp  circuit.h  clause.cpp  clause.h  cut.h  fault.cpp  fault.h  gate.cpp  gate.h  main.cpp  path.cpp  path.h  pattern.cpp  pattern.h  sat.cpp  sat.h  spec.cpp  spec.h  util.cpp  util.h  wire.cpp  wire.h
CAD/script/: unit1.script  unit2.script  unit3.script  unit4.script  unit5.script  unit7.script  unit8.script  unit9.script
CAD/spec/: example_b17.spec  example_s15850.spec  example_s27.spec  example_s38417.spec
CAD/testcase/: unit1.tgz  unit2.tgz  unit3.tgz  unit4.tgz  unit5.tgz  unit7.tgz  unit8.tgz  unit9.tgz
